# qrcode_porte

./: .gitignore  README.md  achat.py  config.json.dist  create_user.py  db.py  pyproject.toml  ref_visit.py
