[tool.poetry]
name = "qrcode_porte"
version = "0.1.0"
description = ""
authors = ["zoopiie <x.greder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mysqlclient = "^2.0.3"
qrcode = "^7.2"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
